# fs25-backuper

./: .env.template  .pre-commit-config.yaml  README.md  pyproject.toml
src/fs25_backuper/: config.py  console.py  downloader.py  error.py  logger.py  main.py  singleton.py
src/fs25_backuper/uploader/: base.py  fs.py  ftp.py  s3.py
